<resources>
    <string name="app_name">Culturelle</string>
    <string name="email">Email</string>
    <string name="textEmail">textEmailAddress</string>
    <string name="hint_password">Password</string>
    <string name="btn_reset_password">reset password</string>
    <string name="btn_login">Login</string>
    <string name="logout">logout</string>
    <string name="hint_email">Email</string>
    <string name="btn_back"><![CDATA[ << Back]]></string>
    <string name="action_sign_in_short">Register</string>
    <string name="Register_id">Enter Your registered email id</string>
    <string name="instruction_id">We have sent you instructions to reset password</string>
    <string name="password_short">Password too short</string>
    <string name="hint_name">FullName</string>
    <string name="painting">Painting</string>
    <string name="Books">Books</string>
    <string name="mAuth_failed">Authentication failed</string>
    <string name="createUserEmail">createUserWithEmail:onComplete</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="Favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authenticated failed, check your email and password or sign up</string>
    <string name="prompt_email">Enter Email Address</string>
    <string name="prompt_password">Enter Passsword</string>
    <string name="question_forgot_password">Forgot Your Password?</string>
    <string name="btn_forgot_password">forgot password</string>
    <string name="item_title">title space</string>
    <string name="profile">profile_image</string>
    <string name="item_description">the description of individual items will be placed here</string>
    <string name="forgot_password_msg">We just need your registered Email address to send you password reset instruction.</string>
    <string name="search">Search</string>
    <string name="noNetwork">no connection available</string>
    <string name="games">Games</string>
    <string name="news">News</string>
    <string name="Gossip">Gossip</string>
    <string name="tech">Tech</string>
    <string name="watch_trailer">Read More</string>
    <string name="readMore">Read More</string>
    <string name="action_fav">favorite</string>
    <string name="share">share</string>
    <string name="remove_favorite">item removed from favorite</string>
    <string name="added_to_favorites">favorites added!</string>
    <string name="Signout">you are signed out.</string>
    <string name="star">star</string>
    <string name="removed_from_favorites">removed from favorites</string>
    <string name="invitation_message">enjoy culturelle</string>
    <string name="invitation_cta">Discover Culturelle!</string>
    <string name="invitation_title">Read about Culturelle</string>
    <string name="invite">invite</string>
    <string name="body">comment</string>
    <string name="name">Name</string>
    <string name="unavailable">no connection available</string>


    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="title_upload_quality">Upload Quality</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">This App offers information about News, Games, Tech and Celeb News for Social Media fanatics! Thanks for Download. Enjoy!</string>
    <string name="app_version">2.0</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="url_faq">Privacy Policy</string>
    <string name="url_policy">Information not Distributed with other Vendors</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">terms-of-service/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="default_notification_channel_id" translatable="false">fcm_channel</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="title_activity_comments">Comments</string>
    <string name="action_refresh">Reload</string>
    <string name="loading">loading</string>
    <dimen name="empty_height">500dp</dimen>
    <string name="facebook_logout">Log Out</string>
    <string name="logout_info">Log out of Culturelle</string>
    <string name="sign_out">sign_out</string>
    <string name="default_notification_channel_name">culturelle news</string>
    <string name="icon">icon</string>
    <string name="btn_retry">Try Again</string>
    <string name="sort_by">Gossip</string>
    <string name="buzz">BuzzFeed</string>
    <string name="entertainment">Entertainment</string>
    <string name="ladbible">The Lad Bible</string>
    <string name="daily">Daily News</string>
    <string name="mashable">Mashable News</string>
    <string name="abc">ABC News</string>
    <string name="aftenposten">Aftenposten</string>
    <string name="ansa">Ansa News</string>
    <string name="al_jazer">Al Jazeer News</string>
    <string name="bbc">BBC News</string>
    <string name="mtv">MTV News</string>
    <string name="national">National</string>
    <string name="engadget">Engadget</string>
    <string name="techcrunch">TechCrunch</string>
    <string name="crypto">Crypto Coin News</string>
    <string name="recode">Recode</string>
    <string name="theverge">The Verge</string>
    <string name="wired">Wired</string>
    <string name="ign">IGN News</string>
    <string name="polygon">Polygon</string>
    <string name="noconnection">there\'s no network connection.</string>
</resources>


