<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activities.MainActivity">

    <item
        android:icon="@drawable/ic_sort_black_24dp"
        android:title="@string/sort_by"
        app:showAsAction="ifRoom">
        <menu>
            <group
                android:id="@+id/menu_sort_by"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/sort_by_abc"
                    android:checked="true"
                    android:title="@string/abc" />
                <item
                    android:id="@+id/sort_by_aftenposten"
                    android:title="@string/aftenposten" />

                <item
                    android:id="@+id/sort_by_ansa"
                    android:title="@string/ansa" />
                <item
                    android:id="@+id/sort_by_al_jazer"
                    android:title="@string/al_jazer" />
                <item
                    android:id="@+id/sort_by_bbc"
                    android:title="@string/bbc" />
                <item
                    android:id="@+id/sort_by_mtv"
                    android:title="@string/mtv" />
                <item
                    android:id="@+id/sort_by_national"
                    android:title="@string/national" />
            </group>
        </menu>
    </item>
</menu>