<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activities.MainActivity">

    <item
        android:icon="@drawable/ic_sort_black_24dp"
        android:title="@string/sort_by"
        app:showAsAction="ifRoom">
        <menu>
            <group
                android:id="@+id/menu_sort_by"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/sort_by_ign"
                    android:checked="true"
                    android:title="@string/ign" />
                <item
                    android:id="@+id/sort_by_polygon"
                    android:title="@string/polygon" />
            </group>
        </menu>
    </item>
</menu>